Changelog

Key: # = backwards incompatible change, ! = new feature, - = bugfix.

1.4, unknown release date
# CSSTidy is now licensed under LGPL!
# Set settings via Configuration class
# All classes are under CSSTidy namespace (PHP 5.3 required)
# csstidy_print class renamed to CSSTidy\Output
# CSSTidy->parse method returns instance of CSSTidy\Output
# Some methods and properties moved from CSSTidy class to CSSTidy\Parsed
# Logger has own class
! CSSTidy\Output->formattedPage added, returns a full HTML page based
  off of CSSTidy\Output->formatted
! cssparsed.css created, contains just the CSS for formatted CSS output
! New CSS 3 units "ch" and "turn" added
! Unit tests added, requires Text_Diff (PEAR) and SimpleTest
! Some invalid selectors are now removed during optimization, this can
  be turned off by setting 'discard_invalid_selectors' to false
! All HTML outputs uses HTML 5
! Gzipped original and minified size are showed
- Added localizations for css_optimiser.php
- Fixed bug with cookie setting for custom templates
- Minor security problem in css_optimiser.php fixed
- Fixed bug with float handling in exotic locales
- Fixed bug with non-functioning getenv in ASAPI
- Fixed bug with bad hexadecimal syntax recovery
- At-selectors optimized by removing unnecessary url()
- Fixed optimisation: 1.0 was not optimised to 1
- Fixed incorrect parsing of !imporant close to numbers
- Allowed Copy to Clipboard for Firefox if preference set (if not, gives 
  instructions on how to add and warning re: security)