@@ -46,7 +46,7 @@ float:left
 
 .form-suggest {
 height:200px;
-background:#DEE2D0;
+background:#dee2d0;
 vertical-align:top
 }
 
@@ -66,7 +66,7 @@ line-height:25px;
 padding-right:10px;
 text-align:right;
 width:100px;
-color:#39738F
+color:#39738f
 }
 
 .font-9 {
