@@ -41,10 +41,10 @@ Edited by Daz  - http://www.forumimages.com - last updated 26-06-03 */
     }
 --PRINT--
 .float-l{float:left}
-.form-suggest{height:200px;background:#DEE2D0;vertical-align:top}
+.form-suggest{height:200px;background:#dee2d0;vertical-align:top}
 .form-input input{font-size:10px}
 .form-input textarea{font-size:11px;width:350px}
-.form-label{font-size:10px;font-weight:700;line-height:25px;padding-right:10px;text-align:right;width:100px;color:#39738F}
+.form-label{font-size:10px;font-weight:700;line-height:25px;padding-right:10px;text-align:right;width:100px;color:#39738f}
 .font-9{font-size:9px}
 --SETTINGS--
 template='high'
