@@ -19,6 +19,8 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
   be turned off by setting 'discard_invalid_selectors' to false
 ! All HTML outputs uses HTML 5
 ! Gzipped original and minified size are showed
+! Support minimizing HSL color
+! HEX colors are converted to lowercase to smaller compressed size
 - Added localizations for css_optimiser.php
 - Fixed bug with cookie setting for custom templates
 - Minor security problem in css_optimiser.php fixed
